# event-graph-generation

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
configs/: actions.yaml  default.yaml  inference.yaml  sam3.yaml  sam3_desk.yaml  sam3_kitchen.yaml  sam3_room.yaml  training.yaml  vjepa.yaml  vjepa_gigantic.yaml  vjepa_training.yaml  vjepa_vitb.yaml  vjepa_vitg.yaml  vlm.yaml  vlm_vllm.yaml  vlm_vllm_server.yaml  vocab.yaml
docs/: annotation.md  architecture.md  architecture_guide.md  config.md  data.md  data_generation.md  evaluation.md  inference.md  models.md  pipeline_todo.md  schemas.md  tracking.md  training.md
scripts/: 0_extract_vjepa_features.py  0_resize_videos.py  1_resize_videos.py  1b_extract_frames.py  2_generate_annotations.py  2_run_sam3_tracking.py  3_generate_annotations.py  4_build_dataset.py  4_train.py  4b_build_vjepa_dataset.py  5_train.py  6_run_inference.py  analyze_slot_attention.py  benchmark_vram.py  benchmark_vram.sh  compress_annotations.py  enrich_timestamps.py  evaluate.py  generate_annotations.py  generate_annotations.sh  predict.py  preprocess.py  resize_videos.py  run_evaluation.py  run_evaluation.sh  run_inference.py  run_inference.sh  run_sam3_tracking.py  run_sam3_tracking.sh  train.py  train_event_decoder.sh  upload_dataset_to_hf.py  upload_to_hf.py  vision_understanding.py
tests/: test_alignment.py  test_config.py  test_dataset.py  test_event_decoder.py  test_feature_extractor.py  test_frame_sampler.py  test_losses.py  test_metrics.py  test_motion.py  test_object_pooling.py  test_pipeline.py  (+7 more)
(+118 files in other folders)
