[project]
name = "event-graph-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "accelerate>=1.7.0",
    "qwen-vl-utils>=0.0.10",
    "Pillow>=11.0.0",
    "tqdm>=4.67.0",
    "bitsandbytes>=0.48.1",
    "torch>=2.10.0",
    "wandb>=0.25.1",
    "torchvision>=0.25.0",
    "opencv-python>=4.8",
    "pydantic>=2.0",
    "scipy>=1.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/event_graph_generation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
